stampForce/src/objects/Sponsorship__c.object
<CustomObject>
    <description>A record of a company sponsoring and event, their unique code, etc.</description>
    <fields>
        <fullName>Company__c</fullName>
        <description>Which company is this for?</description>
        <inlineHelpText>Which company is this for?</inlineHelpText>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsorships</relationshipLabel>
        <relationshipName>Sponsorships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Which event is this sponsorship for?</description>
        <inlineHelpText>Which event is this sponsorship for?</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Sponsorships</relationshipLabel>
        <relationshipName>Sponsorships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Stamp_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this sponsor provide stamps? Can event attendees get a stamp from this sponsor?</description>
        <inlineHelpText>Does this sponsor provide stamps? Can event attendees get a stamp from this sponsor?</inlineHelpText>
        <label>Is Stamp Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <description>Where should an attendee go to get this badge?</description>
        <inlineHelpText>Where should an attendee go to get this badge?</inlineHelpText>
        <label>Location Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Code__c</fullName>
        <description>Up to a 5 character code for this sponsor that will be used in stamp generation.</description>
        <inlineHelpText>Up to a 5 character code for this sponsor that will be used in stamp generation.</inlineHelpText>
        <label>Sponsor Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stamp_Action_Description__c</fullName>
        <defaultValue>&quot;Simply show up&quot;</defaultValue>
        <description>What must a user do to get this stamp?</description>
        <inlineHelpText>What must a user do to get this stamp?</inlineHelpText>
        <label>Stamp Action Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stamp_Image_URL__c</fullName>
        <description>An option URL for an image to use for this sponsors stamp.</description>
        <inlineHelpText>An option URL for an image to use for this sponsors stamp.</inlineHelpText>
        <label>Stamp Image URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Sponsorship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPON-{0000000}</displayFormat>
        <label>Sponsorship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>